--- a/src/app/components/request-reset-password/request-reset-password.component.html
+++ b/src/app/components/request-reset-password/request-reset-password.component.html
@@ -3,14 +3,17 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card my-5">
         <div class="card-body">
-          <h5 class="card-title text-center">Please enter your email below</h5>
+          <h5 class="card-title text-center">
+            {{ "reset-password.ENTER-EMAIL" | translate }}
+          </h5>
           <div>
             <div id="errorMsg" *ngIf="errorMessage">
-              Failed to process request:<span>{{ errorMessage }}</span>
+              {{ "reset-password.FAILED-REQUEST" | translate
+              }}<span>{{ errorMessage }}</span>
             </div>
             <div id="successMsg" *ngIf="successMessage">
-              <span>{{ successMessage }}</span> Check your email (and spam)
-              folder for instructions.
+              <span>{{ successMessage }}</span>
+              {{ "reset-password.CHECK-EMAIL" | translate }}
             </div>
             <div *ngIf="!successMessage">
               <form
@@ -34,11 +37,11 @@
                       f.email.invalid && (f.email.dirty || f.email.touched)
                     "
                   >
-                    <span *ngIf="f.email.errors.required"
-                      >Email is required before submitting this form</span
+                    <span *ngIf="f.email.errors.required">
+                      {{ "reset-password.REQ-EMAIL" | translate }}</span
                     >
-                    <span *ngIf="f.email.errors.email"
-                      >Please enter a valid email</span
+                    <span *ngIf="f.email.errors.email">
+                      {{ "reset-password.VALID-EMAIL" | translate }}</span
                     >
                   </mdb-error>
                 </div>
@@ -49,7 +52,7 @@
                     [disabled]="requestResetForm.invalid || successMessage"
                     class="reset-btn btn"
                   >
-                    Reset Password
+                    {{ "reset-password.RESET-PASS" | translate }}
                   </button>
                 </div>
               </form>
