--- a/src/app/components/reset-password/reset-password.component.html
+++ b/src/app/components/reset-password/reset-password.component.html
@@ -3,7 +3,9 @@
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
       <div class="card card-signin my-5">
         <div class="card-body">
-          <h5 class="card-title text-center">Set New Password</h5>
+          <h5 class="card-title text-center">
+            {{ "reset-password.TITLE" | translate }}
+          </h5>
           <div>
             <div id="errorMsg" *ngIf="errorMessage">
               <span>{{ errorMessage }}</span>
@@ -23,20 +25,21 @@
                     mdbValidate
                     required
                   />
-                  <label for="newPassword">New Password</label>
+                  <label for="newPassword">{{
+                    "reset-password.NEW-PASS" | translate
+                  }}</label>
                   <mdb-error
                     *ngIf="
                       f.newPassword.invalid &&
                       (f.newPassword.dirty || f.newPassword.touched)
                     "
                   >
-                    <span *ngIf="f.newPassword.errors.required"
-                      >New password is required before submitting this
-                      form</span
-                    >
-                    <span *ngIf="f.newPassword.errors.minlength"
-                      >Password must be at least 6 characters</span
-                    >
+                    <span *ngIf="f.newPassword.errors.required">{{
+                      "reset-password.REQ-MSG-PASS" | translate
+                    }}</span>
+                    <span *ngIf="f.newPassword.errors.minlength">{{
+                      "reset-password.REQ-PASS-LENGTH" | translate
+                    }}</span>
                   </mdb-error>
                 </div>
                 <div class="md-form mb-5">
@@ -49,19 +52,21 @@
                     mdbValidate
                     required
                   />
-                  <label for="confirmPassword">New Password</label>
+                  <label for="confirmPassword">{{
+                    "reset-password.NEW-PASS" | translate
+                  }}</label>
                   <mdb-error
                     *ngIf="
                       f.confirmPassword.invalid &&
                       (f.confirmPassword.dirty || f.confirmPassword.touched)
                     "
                   >
-                    <span *ngIf="f.confirmPassword.errors.required"
-                      >Must confirm password before submitting this form</span
-                    >
-                    <span *ngIf="f.confirmPassword.errors.mustMatch"
-                      >Passwords must match</span
-                    >
+                    <span *ngIf="f.confirmPassword.errors.required">{{
+                      "reset-password.ALERT" | translate
+                    }}</span>
+                    <span *ngIf="f.confirmPassword.errors.mustMatch">{{
+                      "reset-password.ALERT-MATCH-PASS" | translate
+                    }}</span>
                   </mdb-error>
                 </div>
                 <div class="form-group text-center">
@@ -71,7 +76,7 @@
                     [disabled]="resetForm.invalid || successMessage"
                     class="reset-btn btn"
                   >
-                    Update Password
+                    {{ "reset-password.UPDATE-PASS" | translate }}
                   </button>
                 </div>
               </form>
