--- a/src/app/components/restaurant-detail/restaurant-detail.component.html
+++ b/src/app/components/restaurant-detail/restaurant-detail.component.html
@@ -1,21 +1,24 @@
 <div class="restaurant-detail container-fluid">
   <div class="alert alert-danger" *ngIf="!userAllowedOnPage">
-    Current user not authorized to view this restaurant...
+    {{ "restaurant-details.USER-ALERT" | translate }}
   </div>
   <div class="restaurant-detail-content container">
     <div *ngIf="restaurant">
-      <h2>{{ restaurant.name }} Details</h2>
+      <h2>
+        {{ restaurant.name }} {{ "restaurant-details.DETAILS" | translate }}
+      </h2>
       <div class="basic-info list-group">
         <div
           class="list-group-item first-item restaurant-detail-section-header"
         >
-          <h4>Basic Info</h4>
+          <h4>{{ "restaurant-details.INFO" | translate }}</h4>
         </div>
         <div class="list-group-item">
           <span class="restaurant-detail-field">ID: </span>{{ restaurant._id }}
         </div>
         <div class="list-group-item">
-          <span class="restaurant-detail-field">Name: </span
+          <span class="restaurant-detail-field"
+            >{{ "restaurant-details.NAME" | translate }}:</span
           >{{ restaurant.name }}
         </div>
         <div class="list-group-item">
@@ -25,7 +28,9 @@
         <div class="list-group-item" *ngIf="userHasContactTracing">
           <div class="row restaurant-setting">
             <div class="col-md-2">
-              <span class="restaurant-detail-field">Contact Tracing: </span>
+              <span class="restaurant-detail-field"
+                >{{ "restaurant-details.CONTACT-TRACING" | translate }}
+              </span>
             </div>
             <div class="col-md-auto">
               <div
@@ -33,14 +38,14 @@
                 *ngIf="restaurant.tracingEnabled"
                 style="color: green"
               >
-                Enabled
+                {{ "restaurant-details.ENABLED" | translate }}
               </div>
               <div
                 class="enabled-disabled"
                 *ngIf="!restaurant.tracingEnabled"
                 style="color: red"
               >
-                Disabled
+                {{ "restaurant-details.DISABLED" | translate }}
               </div>
             </div>
             <div class="col-md-auto">
@@ -50,8 +55,12 @@
                   [(ngModel)]="selectedCTSetting"
                   (ngModelChange)="onChangeCT($event)"
                 >
-                  <option value="true">Enable Contact Tracing</option>
-                  <option value="false">Disable Contact Tracing</option>
+                  <option value="true">
+                    {{ "restaurant-details.E-CONTACT-TRACING" | translate }}
+                  </option>
+                  <option value="false">
+                    {{ "restaurant-details.D-CONTACT-TRACING" | translate }}
+                  </option>
                 </select>
               </div>
             </div>
@@ -67,7 +76,7 @@
                     isCTSettingSubmitted
                   "
                 >
-                  Save
+                  {{ "restaurant-details.SAVE" | translate }}
                 </button>
               </div>
             </div>
@@ -76,7 +85,9 @@
         <div class="list-group-item">
           <div class="row restaurant-setting">
             <div class="col-md-2">
-              <span class="restaurant-detail-field">Current Cover Photo: </span>
+              <span class="restaurant-detail-field">{{
+                "restaurant-details.COVER-PHOTO" | translate
+              }}</span>
             </div>
             <div class="col-md-auto">
               <img style="width: 150px" [src]="restaurant.coverPhotoUrl" />
@@ -86,7 +97,9 @@
         <div class="list-group-item">
           <div class="row restaurant-setting">
             <div class="col-md-2">
-              <span class="restaurant-detail-field"> Update Cover Photo: </span>
+              <span class="restaurant-detail-field"
+                >{{ "restaurant-details.UPDATE-COVER-PHOTO" | translate }}
+              </span>
             </div>
             <div class="col-md-auto">
               <input
@@ -104,7 +117,7 @@
                   (click)="uploadCoverPhoto()"
                   [disabled]="!isValidImage || isSubmitted"
                 >
-                  Upload
+                  {{ "restaurant-details.UPLOAD" | translate }}
                 </button>
               </div>
             </div>
@@ -116,7 +129,9 @@
                 <div class="col-md-2">
                   <mat-spinner diameter="20"></mat-spinner>
                 </div>
-                <div class="col-md-auto">Uploading image...</div>
+                <div class="col-md-auto">
+                  {{ "restaurant-details.UPLOAD-MSG" | translate }}
+                </div>
               </div>
             </div>
           </div>
@@ -129,7 +144,7 @@
             >
               <div class="row">
                 <div class="col-md-11">
-                  <h4>Restaurant Menus</h4>
+                  <h4>{{ "restaurant-details.REST-MENUS" | translate }}</h4>
                 </div>
                 <div class="col-md-auto">
                   <button
@@ -151,7 +166,9 @@
                       "
                     >
                       <mat-icon>menu_book</mat-icon>
-                      <span>Create a BienMenu menu</span>
+                      <span>{{
+                        "restaurant-details.CREATE-MENU" | translate
+                      }}</span>
                     </button>
                     <button mat-menu-item (click)="openAddMenu(0)">
                       <mat-icon>picture_as_pdf</mat-icon>
@@ -159,7 +176,7 @@
                     </button>
                     <button mat-menu-item (click)="openAddMenu(2)">
                       <mat-icon>link</mat-icon>
-                      <span>Link to an existing menu</span>
+                      <span>{{ "restaurant-details.LINK" | translate }}</span>
                     </button>
                   </mat-menu>
                 </div>
@@ -171,7 +188,9 @@
             >
               <div class="row menu-row">
                 <div class="col-md-10">
-                  <span class="restaurant-detail-field">Menu Name: </span
+                  <span class="restaurant-detail-field">{{
+                    "restaurant-details.MENU-NAME" | translate
+                  }}</span
                   >{{ menu.name }}
                   <mat-slide-toggle
                     class="menu-toggle"
@@ -188,13 +207,15 @@
                     class="delete-btn btn btn-block"
                     (click)="deleteMenu(menu, restaurant._id)"
                   >
-                    Delete Menu
+                    {{ "restaurant-details.DELETE-MENU" | translate }}
                   </button>
                 </div>
               </div>
               <div class="row menu-row">
                 <div class="col-md-10">
-                  <span class="restaurant-detail-field">Last Updated: </span
+                  <span class="restaurant-detail-field">{{
+                    "restaurant-details.LAST-UPDATED" | translate
+                  }}</span
                   >{{ formatDate(menu.lastupdated) }}
                 </div>
                 <div class="col-md-auto">
@@ -205,7 +226,7 @@
                     (click)="updateMenu(menu._id, i)"
                     [disabled]="!menuUpdateAllowed"
                   >
-                    Update Menu
+                    {{ "restaurant-details.UPDATE-MENU" | translate }}
                   </button>
                 </div>
                 <div
@@ -213,7 +234,7 @@
                   *ngIf="menuToUpdateIndex == i && success"
                 >
                   <div class="menu-update-alert alert alert-success">
-                    Menu Updated!
+                    {{ "restaurant-details.UPDATE-MSG" | translate }}
                   </div>
                 </div>
               </div>
@@ -242,19 +263,19 @@
                 class="menu-update-alert alert alert-info"
                 *ngIf="!menuUpdateAllowed"
               >
-                The maximum menu updates has been reached for this month. You
-                can upgrade your plan for unlimited updates!
+                {{ "restaurant-details.ALERT-MSG-MONTH" | translate }}
               </div>
               <div
                 class="menu-update-alert alert alert-info"
                 *ngIf="maxMenuCountReached"
               >
-                The maximum number of allowed menus per restaurant has been
-                reached. You can upgrade your plan to add more!
+                {{ "restaurant-details.ALERT-MSG-RESTO" | translate }}
               </div>
               <div *ngIf="maxMenuCountReached || !menuUpdateAllowed">
                 <a routerLink="/pricing-plans">
-                  <button mat-raised-button class="btn">Upgrade Now</button>
+                  <button mat-raised-button class="btn">
+                    {{ "restaurant-details.UPGRADE" | translate }}
+                  </button>
                 </a>
               </div>
               <app-add-menu
@@ -270,7 +291,7 @@
                 class="delete-btn btn"
                 (click)="deleteRestaurant(restaurant._id)"
               >
-                Delete Restaurant
+                {{ "restaurant-details.DELETE-RESTO" | translate }}
               </button>
             </div>
           </div>
