--- a/src/app/components/add-menu/add-menu.component.html
+++ b/src/app/components/add-menu/add-menu.component.html
@@ -15,7 +15,9 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header text-center">
-        <h4 class="modal-title w-100 font-weight-bold">Add Menu</h4>
+        <h4 class="modal-title w-100 font-weight-bold">
+          {{ "add-menu.ADD-MENU" | translate }}
+        </h4>
         <button
           type="button"
           class="close"
@@ -41,15 +43,17 @@
               mdbValidate
               required
             />
-            <label for="name">Menu name</label>
+            <label for="name">{{ "add-menu.NAME" | translate }}</label>
             <mdb-error *ngIf="name.invalid && (name.dirty || name.touched)">
-              <span *ngIf="name.errors.required">Menu name is required</span>
-              <span *ngIf="name.errors.duplicate"
-                >Menu name is already in use, menu names must be unique</span
-              >
+              <span *ngIf="name.errors.required">{{
+                "add-menu.REQ-MSG-NAME" | translate
+              }}</span>
+              <span *ngIf="name.errors.duplicate">{{
+                "add-menu.MENU-NAME-ALREADY-EXISTS" | translate
+              }}</span>
             </mdb-error>
             <mdb-success *ngIf="name.valid && (name.dirty || name.touched)"
-              >Valid
+              >{{ "add-menu.VALID" | translate }}
             </mdb-success>
           </div>
           <div class="md-form mb-5" *ngIf="isExternalMenu">
@@ -63,23 +67,25 @@
               mdbValidate
               required
             />
-            <label for="externalMenuLink">External Link</label>
+            <label for="externalMenuLink">{{
+              "add-menu.EXTERNAL-LINK" | translate
+            }}</label>
             <mdb-error
               *ngIf="
                 externalMenuLink.invalid &&
                 (externalMenuLink.dirty || externalMenuLink.touched)
               "
             >
-              <span *ngIf="externalMenuLink.errors.required"
-                >External link is required</span
-              >
+              <span *ngIf="externalMenuLink.errors.required">{{
+                "add-menu.REQ-MSG-LINK" | translate
+              }}</span>
             </mdb-error>
             <mdb-success
               *ngIf="
                 externalMenuLink.valid &&
                 (externalMenuLink.dirty || externalMenuLink.touched)
               "
-              >Valid
+              >{{ "add-menu.VALID" | translate }}
             </mdb-success>
           </div>
           <div class="md-form mb-3" *ngIf="!isExternalMenu">
@@ -109,21 +115,20 @@
             (isSubmitted && !isOperationFailed)
           "
         >
-          Save
+          {{ "add-menu.SAVE" | translate }}
         </button>
         <div class="alert alert-danger" *ngIf="isOperationFailed">
-          Failed to add menu...either you have exceeded the limit of allowed
-          menus or there's an issue with the server.
+          {{ "add-menu.FAILED-ALERT" | translate }}
         </div>
         <div class="alert alert-danger" *ngIf="!isValidFile && fileToUpload">
-          File must not exceed 5 MB and must be in PDF format...
+          {{ "add-menu.SIZE-ALERT" | translate }}
         </div>
         <div class="alert alert-info" *ngIf="isSubmitted && !isOperationFailed">
           <div class="row">
             <div class="col-md-2">
               <mat-spinner diameter="20"></mat-spinner>
             </div>
-            <div class="col-md-auto">Saving menu...</div>
+            <div class="col-md-auto">{{ "add-menu.SAVING" | translate }}</div>
           </div>
         </div>
       </div>
