--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -1,26 +1,39 @@
-<div class="menus-container container-fluid" [ngClass]="{ 'top-padding': isLoggedIn }" [@fadeInOut]>
+<div
+  class="menus-container container-fluid"
+  [ngClass]="{ 'top-padding': isLoggedIn }"
+  [@fadeInOut]
+>
   <div class="menus-container-content container" *ngIf="currentRestaurant">
     <div class="d-flex flex-column">
       <div class="menus-title">
         <h2>{{ currentRestaurant.name }}</h2>
       </div>
       <ul class="menus list-group-flush" *ngIf="menus">
-        <li *ngFor="let menu of menus; let i = index" (click)="openMenu(menu)" [class.disabled]="isOpeningMenu"
-          class="menu-item list-group-item d-flex justify-content-between align-items-center">
+        <li
+          *ngFor="let menu of menus; let i = index"
+          (click)="openMenu(menu)"
+          [class.disabled]="isOpeningMenu"
+          class="menu-item list-group-item d-flex justify-content-between align-items-center"
+        >
           <div class="menu-item-content d-flex w-100 justify-content-between">
             <div class="d-flex flex-column">
               <h5 class="mb-1">{{ menu.name }}</h5>
               <div class="d-flex w-100">
                 <mat-icon matListIcon [@rubberBand]>touch_app</mat-icon>
-                <p class="mb-1">Tap to view menu</p>
+                <p class="mb-1">{{ "menu-list.TAP" | translate }}</p>
               </div>
             </div>
           </div>
         </li>
       </ul>
       <div class="pdf-container container" *ngIf="pdfSrc">
-        <pdf-viewer [src]="pdfSrc" [render-text]="true" [original-size]="false" [show-borders]="true"
-          style="display: block"></pdf-viewer>
+        <pdf-viewer
+          [src]="pdfSrc"
+          [render-text]="true"
+          [original-size]="false"
+          [show-borders]="true"
+          style="display: block"
+        ></pdf-viewer>
       </div>
     </div>
   </div>
